# chatgpt-dingtalk-bot

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.sh  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml  test.py  tox.ini  upgrade_scripts.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
api/: index.html
changelog/: index.html
chatbot/: __init__.py  chatgpt.py  cli.py  config.py  constants.py  database.py  dingtalk.py  gpt.py  main.py  models.py  schemas.py  templates.py  utils.py
contributing/: index.html
docker/: start
docs/: api.md  installation.md  usage.md
en/: index.html
en/api/: index.html
en/changelog/: index.html
en/contributing/: index.html
en/installation/: index.html
en/usage/: index.html
installation/: index.html
overrides/partials/: comments.html
search/: search_index.json
tests/: __init__.py  test_chatbot.py
usage/: index.html
zh/: index.html
zh/api/: index.html
zh/changelog/: index.html
zh/contributing/: index.html
zh/installation/: index.html
zh/usage/: index.html
