[tool.poetry]
name = "chatgpt-dingtalk-bot"
version = "0.6.6"
homepage = "https://github.com/anyidea/chatgpt-dingtalk-bot"
description = "A dingtalk chatbot powered by chatGPT.."
authors = ["Aiden Lu <allaher@icloud.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [{ include = "chatbot" }, { include = "tests", format = "sdist" }]

[tool.poetry.dependencies]
python = ">=3.9.*,<3.12"
revchatgpt = "^6.8.6"
httpx = { extras = ["socks"], version = "^0.23.3" }
python-dotenv = "^0.21.1"
databases = { extras = ["aiosqlite"], version = "^0.7.0" }
dingtalk-stream = "^0.15.2"
pydantic = "^1.10.9"
tiktoken = "^0.5.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
tox = "^4.11.4"
pre-commit = "^3.6.0"
virtualenv = "^20.25.0"
pip = "^23.3.2"
toml = "^0.10.2"
commitizen = "^3.13.0"
twine = "^4.0.2"

[tool.poetry.group.test.dependencies]
black = "^23.12.0"
isort = "^5.13.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.5.3"
jieba = "^0.42.1"
mkdocs-material = "^9.5.2"
mkdocstrings = {version = "^0.24.0", extras = ["python"]}
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-static-i18n = "^1.2.0"
pymdown-extensions = "^10.5"

[tool.poetry.scripts]
chatgpt-dingtalk-bot = 'chatbot.cli:main'


[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']


[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = ["venv/"]
# you can skip files as below
#skip_glob = docs/conf.py

[tool.commitizen]
version = "0.6.6"
changelog_start_rev = "0.3.0"
tag_format = "v$major.$minor.$patch$prerelease"
version_files = ["pyproject.toml:version", "chatbot/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
